evidence/20260407/CFG-01/artifacts/20260407T070734Z-shell-probe-get-capabilities.log
  File "<stdin>", line 30
    if b@CFG: in buf:
              ^^
SyntaxError: invalid syntax
